# ShiraPlayer2.2.0

./: .travis.yml  CMakeLists.txt  INSTALL  README  README.md
data/: default_config.ini  mainRes.qrc  name.txt  ssystem.ini  zone.tab
data/gui/: Thumbs.db  normalStyle.css
nebulae/default/: nebula_textures.fab
po/stellarium/: POTFILES.in  ja.po  pl.po  pt_BR.po  stellarium.pot  tr.po
po/stellarium-skycultures/: gu.po  ja.po  stellarium-skycultures.pot  tr.po
scripts/: Solar system screensaver.ssc
skycultures/.svn/: wc.db
src/: CLIProcessor.cpp  CLIProcessor.hpp  CMakeLists.txt  StelLogger.cpp  StelLogger.hpp  StelMainGraphicsView.cpp  StelMainGraphicsView.hpp  StelMainWindow.cpp  StelMainWindow.hpp  main.cpp  shiraplayerform.cpp  shiraplayerform.hpp  stelqglwidget.cpp  stelqglwidget.h  translations.h
src/blowfish/: blowfish.h
src/catalogpages/: constellationwindow.cpp  constellationwindow.h  constellationwindow.ui  messierimage.cpp  messierimage.h  messierwindow.cpp  messierwindow.h  messierwindow.ui
src/core/: MultiLevelJsonBase.cpp  MultiLevelJsonBase.hpp  OctahedronPolygon.cpp  OctahedronPolygon.hpp  RefractionExtinction.cpp  RefractionExtinction.hpp  SFont.cpp  SFont.hpp  SimbadSearcher.cpp  SimbadSearcher.hpp  SphericMirrorCalculator.cpp  SphericMirrorCalculator.hpp  StelApp.cpp  StelApp.hpp  StelAppGraphicsWidget.cpp  StelAppGraphicsWidget.hpp  StelAudioMgr.cpp  StelAudioMgr.hpp  StelCore.cpp  StelCore.hpp  StelFader.hpp  StelFileMgr.cpp  StelFileMgr.hpp  StelFontMgr.cpp  StelFontMgr.hpp  StelGeodesicGrid.cpp  StelGeodesicGrid.hpp  StelGuiBase.cpp  StelGuiBase.hpp  StelIniParser.cpp  StelIniParser.hpp  StelJsonParser.cpp  StelJsonParser.hpp  StelLoadingBar.cpp  StelLoadingBar.hpp  StelLocaleMgr.cpp  StelLocaleMgr.hpp  StelLocation.cpp  StelLocation.hpp  StelLocationMgr.cpp  (+73 more)
src/encrypt/: cBinExt.cpp  cBinExt.h  hash_defines.h
src/flybyutil/: flybymanager.cpp  flybymanager.h  flybymanager.ui
src/freehand/: freehanditem.cpp  freehanditem.hpp  tupcolorpalette.cpp  tupcolorpalette.h  tupcolorwidget.cpp  tupcolorwidget.h  tupgraphicalgorithm.cpp  tupgraphicalgorithm.h  tuppenpreviewcanvas.cpp  tuppenpreviewcanvas.h  tupslider.cpp  tupslider.h
src/glm/: glm.c  glm.h
src/glrc/include/: glrc.h
src/glrc/lib/: glrc.lib
src/gui/: AngleSpinBox.cpp  AngleSpinBox.hpp  ConfigurationDialog.cpp  ConfigurationDialog.hpp  DateTimeDialog.cpp  DateTimeDialog.hpp  Dialog.cpp  Dialog.hpp  HelpDialog.cpp  HelpDialog.hpp  LocationDialog.cpp  LocationDialog.hpp  MapLabel.cpp  MapLabel.hpp  ScriptConsole.cpp  ScriptConsole.hpp  SearchDialog.cpp  SearchDialog.hpp  SkyGui.cpp  SkyGui.hpp  StelDialog.cpp  StelDialog.hpp  StelGui.cpp  StelGui.hpp  StelGuiItems.cpp  StelGuiItems.hpp  StelScriptSyntaxHighlighter.cpp  StelScriptSyntaxHighlighter.hpp  ViewDialog.cpp  ViewDialog.hpp  audiomanagerdialog.cpp  audiomanagerdialog.h  audiomanagerdialog.ui  configurationDialog.ui  dateTimeDialogGui.ui  helpDialogGui.ui  illimunationdialog.cpp  illimunationdialog.h  illimunationdialog.ui  landscapemanager.cpp  (+24 more)
src/gui/.svn/: all-wcprops  entries
src/modules/: Atmosphere.cpp  Atmosphere.hpp  Constellation.cpp  Constellation.hpp  ConstellationMgr.cpp  ConstellationMgr.hpp  GridLinesMgr.cpp  GridLinesMgr.hpp  LabelMgr.cpp  LabelMgr.hpp  Landscape.cpp  Landscape.hpp  LandscapeMgr.cpp  LandscapeMgr.hpp  Meteor.cpp  Meteor.hpp  MeteorMgr.cpp  MeteorMgr.hpp  MilkyWay.cpp  MilkyWay.hpp  Nebula.cpp  Nebula.hpp  NebulaMgr.cpp  NebulaMgr.hpp  Orbit.cpp  Orbit.hpp  Planet.cpp  Planet.hpp  ScreenImageMgr.cpp  ScreenImageMgr.cpp.autosave  ScreenImageMgr.hpp  Skybright.cpp  Skybright.hpp  Skylight.cpp  Skylight.hpp  SolarSystem.cpp  SolarSystem.hpp  Solve.hpp  StarMgr.cpp  StarMgr.hpp  (+10 more)
src/planetsephems/: elliptic_to_rectangular.c  elliptic_to_rectangular.h  elp82b.c  elp82b.h  gust86.c  gust86.h  l1.c  l1.h  marssat.c  marssat.h  misc_stellplanet.c  misc_stellplanet.h  pluto.c  pluto.h  stellplanet.c  stellplanet.h  tass17.c  tass17.h  vsop87.c  vsop87.h
src/planetsephems/.svn/: all-wcprops  entries
src/presenter/: VideoSource.cpp  VideoSource.h  flowlayout.cpp  flowlayout.h  qimagepropwidget.cpp  qimagepropwidget.h  qimagepropwidget.ui  qmediabrowserwidget.cpp  qmediabrowserwidget.h  qplayimagewidget.cpp  qplayimagewidget.h  test1.ui
src/previewutil/: PrevApp.cpp  PrevApp.hpp  PrevPainter.cpp  PrevPainter.hpp  PrevglWidget.cpp  PrevglWidget.hpp  openglscene.cpp  openglscene.hpp  prevappgraphicwidget.cpp  prevappgraphicwidget.hpp  previewdialog.cpp  previewdialog.hpp  previewdialog.ui  previewform.cpp  previewform.hpp  previewform.ui
src/projectorPluginLibs/include/: frmprojector.h  objloader.h  prjchannel.h  projSettingDialog.h  shiraprojector.h  shiraprojector_global.h
src/recordutils/: AviFile.cpp  GLToMovie.h  QVideoEncoder.cpp  QVideoEncoder.h  ffmpeg.h  glthread.cpp  glthread.h
src/scripting/: ScriptSleeper.cpp  ScriptSleeper.hpp  StelMainScriptAPI.cpp  StelMainScriptAPI.hpp  StelMainScriptAPIProxy.cpp  StelMainScriptAPIProxy.hpp  StelScriptMgr.cpp  StelScriptMgr.hpp  StratoscriptPreprocessor.cpp
src/socketutils/: mysocket.cpp  mysocket.h  rsync.cpp  rsync.h  sntpclient.cpp  sntpclient.h
src/tests/: testDates.cpp  testDates.hpp  testRefractionExtinction.cpp  testRefractionExtinction.hpp  testStelFileMgr.cpp  testStelFileMgr.hpp  testStelJsonParser.cpp  testStelJsonParser.hpp  testStelSphereGeometry.cpp  testStelSphereGeometry.hpp  testStelSphericalIndex.cpp  testStelSphericalIndex.hpp  testStelVertexArray.cpp  testStelVertexArray.hpp
src/videoutils/: AudioFile.cpp  AudioFile.h  VideoFile.cpp  VideoFile.h  audioclass.cpp  audioclass.h  cmdutils.h  embedaudiowarning.cpp  embedaudiowarning.h  embedaudiowarning.ui  ffplayMovie.cpp  ffplayMovie.h  videoclass.cpp  videoclass.h  videooperations.cpp  videooperations.h
src/warping/: Warp.cpp  Warp.h  channel.cpp  channel.h  glwidget.cpp  glwidget.h  qtlogo.cpp  qtlogo.h  warpwindow.cpp  warpwindow.h  warpwindow.ui  window.cpp  window.h
stars/default/: name.fab
textures/: Thumbs.db
util/: parse_hip.pl
(+266 files in other folders)
